# time-tracker

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  README.md  TEST_COVERAGE_REPORT.md  deny.toml  pyproject.toml
.github/workflows/: pr-and-main.yml  release.yml
.opencode/skills/: ontology.toml
config/: tmux-hook.conf  tt-watch.service  tt-watcher.service
crates/tt-cli/: Cargo.toml
crates/tt-cli/src/: cli.rs  config.rs  lib.rs  machine.rs  main.rs  todo_dispatch.rs  todo_store.rs
crates/tt-cli/src/commands/: classify.rs  context.rs  events.rs  export.rs  import.rs  infer.rs  ingest.rs  init.rs  machines.rs  mod.rs  priority.rs  recompute.rs  report.rs  status.rs  streams.rs  suggest.rs  suggest_tags.rs  sync.rs  tag.rs  todo.rs  util.rs
crates/tt-cli/src/commands/priority/: rename.rs
crates/tt-cli/src/commands/snapshots/: tt_cli__commands__events__tests__events_command_outputs_jsonl.snap  tt_cli__commands__ingest__tests__event_serialization_matches_spec.snap  tt_cli__commands__machines__tests__machines_empty.snap  tt_cli__commands__machines__tests__machines_with_entries.snap  tt_cli__commands__priority__tests__priority_ls_snapshots.snap  tt_cli__commands__report__tests__report_all_untagged.snap  tt_cli__commands__report__tests__report_empty_period.snap  tt_cli__commands__report__tests__report_json_agent_session_counts_match_total.snap  tt_cli__commands__report__tests__report_json_by_tag_aggregates.snap  tt_cli__commands__report__tests__report_json_multitag_stream_duplicate.snap  tt_cli__commands__report__tests__report_json_output.snap  tt_cli__commands__report__tests__report_json_tagged_and_untagged.snap  tt_cli__commands__report__tests__report_json_top_sessions_sorted.snap  tt_cli__commands__report__tests__report_json_with_agent_sessions_summary.snap  tt_cli__commands__report__tests__report_single_stream.snap  tt_cli__commands__report__tests__report_truncation.snap  tt_cli__commands__report__tests__report_week_outputs_summary_and_breakdowns.snap.new  tt_cli__commands__status__tests__status_command_outputs_last_event_per_source.snap  tt_cli__commands__status__tests__status_empty_database.snap  tt_cli__commands__status__tests__status_with_events.snap  tt_cli__commands__streams__tests__streams_command_handles_empty_db.snap  tt_cli__commands__streams__tests__streams_command_outputs_table.snap  tt_cli__commands__streams__tests__streams_empty_database.snap  tt_cli__commands__streams__tests__streams_json_output.snap  tt_cli__commands__streams__tests__streams_multiple_with_tags.snap  tt_cli__commands__streams__tests__streams_single_stream_no_tags.snap  tt_cli__commands__tag__tests__tag_adds_stream_tag.snap
crates/tt-cli/src/commands/streams/: link.rs  tests.rs
crates/tt-cli/src/commands/todo/: check.rs  drift.rs  ids.rs  json.rs  mutate.rs  order_edit.rs  raw.rs  render.rs  view.rs
crates/tt-cli/src/commands/todo/render/: tests.rs
crates/tt-cli/src/commands/todo/snapshots/: tt_cli__commands__todo__json__tests__todo_next_json.snap  tt_cli__commands__todo__render__tests__todo_ls_malformed_line_diagnostic_snapshot.snap  tt_cli__commands__todo__render__tests__todo_next_blocked.snap  tt_cli__commands__todo__render__tests__todo_next_by_priority.snap  tt_cli__commands__todo__render__tests__todo_next_default.snap  tt_cli__commands__todo__render__tests__todo_next_due.snap  tt_cli__commands__todo__render__tests__todo_next_later.snap  tt_cli__commands__todo__render__tests__todo_next_quick.snap
crates/tt-cli/src/commands/watch/: cosmic.rs  mod.rs
crates/tt-cli/tests/: e2e_flow.rs  priority_describe.rs  priority_rename.rs  streams_link.rs  sync_integration.rs  todo_blocked.rs  todo_check.rs  todo_drift.rs  todo_drift_idle.rs  todo_mutations.rs  todo_readonly.rs  todo_regressions.rs  todo_store.rs
crates/tt-core/: AGENTS.md  Cargo.toml
crates/tt-core/src/: allocation.rs  event.rs  event_type.rs  id.rs  inference.rs  lib.rs  opencode.rs  project.rs  session.rs  stream.rs  suggest.rs  todos.rs  types.rs
crates/tt-core/src/todos/: drift.rs  model.rs  order.rs  parse.rs  render.rs  tests.rs
crates/tt-core/src/todos/tests/: drift.rs  order.rs  support.rs
crates/tt-db/: AGENTS.md  Cargo.toml
crates/tt-db/src/: lib.rs
crates/tt-llm/: Cargo.toml
crates/tt-llm/src/: lib.rs
crates/tt-watcher/: Cargo.toml
crates/tt-watcher/src/: backend.rs  cosmic.rs  lib.rs  main.rs
docs/plans/: 2026-01-30-migrate-codex-features.md  2026-02-01-stream-inference-enrichment.md  2026-02-02-cli-cleanup.md  2026-02-02-infer-streams-skill.md  2026-02-02-semantic-stream-inference.md  2026-02-02-session-type-field.md  2026-02-02-stream-inference-fixes.md  2026-02-03-git-project-field.md  2026-02-05-opencode-session-ingestion-plan.md  2026-02-05-opencode-session-ingestion.md  2026-02-06-context-export-parent-session-id.md  2026-02-14-opencode-sqlite-migration.md  2026-02-19-multi-machine-sync-design.md  2026-02-19-multi-machine-sync-plan.md  2026-02-27-classification-layer.md  2026-02-27-classify-cleanup.md  2026-05-05-opencode-per-session-dbs.md
ralph/: instructions.code-implementing.md  instructions.code-planning.md  instructions.spec-implementing.md  instructions.spec-planning.md  prompt.md
scripts/: deploy-remote.sh
specs/: README.md  plan.current.md  plan.md
specs/architecture/: components.md  integrations.md  overview.md
specs/design/: 2026-02-27-classification-layer-design.md  2026-03-24-automatic-sync-design.md  2026-05-27-dashboard-design.md  2026-06-14-cosmic-window-idle-watcher-design.md  2026-06-14-priorities-todos-design.md  core-concepts.md  data-model.md  ux-cli.md  ux-reports.md  ux-tui.md
specs/discovery/: pain-points.md  personas.md  user-interviews.md  user-stories.md
specs/implementation/: 2026-06-14-cosmic-window-idle-watcher-plan.md  2026-06-14-priorities-todos-plan.md  mvp.md  phases.md  tech-stack.md
specs/research/: automatic-sync-research.md  market-landscape.md  references.md  technical-foundations.md
src/tt/: cli.py
tests/: test_cli.py
tt-local/: pyproject.toml
tt-local/tests/: test_cli.py  test_db.py  test_e2e.py  test_llm.py  test_tags.py  (+2 more)
(+21 files in other folders)
