[package]
name = "tt-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "AI-native time tracker CLI"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
tt-core.workspace = true
tt-db.workspace = true
tt-llm.workspace = true

clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
figment.workspace = true
dirs.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[lints]
workspace = true
