[package]
name = "tt-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "AI-native time tracker CLI"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
tt-core.workspace = true
tt-db.workspace = true

clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
figment.workspace = true
iana-time-zone = "0.1"
dirs.workspace = true
fs2 = "0.4"
regex = "1.11"
uuid.workspace = true
hostname.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
rusqlite.workspace = true

[lints]
workspace = true
