[package]
name = "tt-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core domain logic for time tracker"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
