[package]
name = "tt-watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "COSMIC window/idle watcher daemon for the tt time tracker"

[[bin]]
name = "tt-watcher"
path = "src/main.rs"

[dependencies]
tt-cli = { path = "../tt-cli" }
tt-core.workspace = true
tt-db.workspace = true

clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["staging", "client"] }
cctk = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit", rev = "8e84152" }

[dev-dependencies]
rusqlite.workspace = true

[lints]
workspace = true
